# AI611-Final-Project

./: .gitignore  DDPO2.ipynb  DDPO_pretrained.ipynb  DDPO_pretrained_commented.ipynb  README.md  VLM_COMPARISON_README.md  environment.yml  requirements.txt  setup_environment.sh
DDPO/: README.md  setup.py  train.py
DDPO/config/: base.py  dgx.py
DDPO/ddpo_pytorch/: rewards.py
LLAVA/: README.md  app.py  gunicorn.conf.py  models.py  pyproject.toml  test.py
LLAVA/llava/: __init__.py  mm_utils.py  utils.py
LLAVA/llava/model/: __init__.py  apply_delta.py  builder.py  consolidate.py  llava_arch.py  make_delta.py
LLAVA/llava/model/language_model/: llava_llama.py  llava_mistral.py  llava_mpt.py
LLAVA/llava/model/multimodal_encoder/: builder.py
LLAVA/llava_server/: bertscore.py  llava(the not working file).py  llava.py  llava2.py
config/: vlm_comparison.py
ddpo_pytorch/: rewards.py  vlm_comparison.py
ddpo_pytorch/diffusers_patch/: ddim_with_logprob.py
experiments/: experiment_log.md
notebooks/: VLM_Comparison_Demo.ipynb
notebooks/vlm_comparison_results/: vlm_comparison_report_1748909259.json
scripts/: train.py  update_experiment_log.py  vlm_comparison_demo.py
vlm_comparison_results/: comparison_results.json
