[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llava-server"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "bert-score==0.3.13",
    "flask==2.3.2",
    "gunicorn==20.1.0",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "accelerate (>=1.7.0,<2.0.0)",
    "torchao (>=0.11.0,<0.12.0)",
    "peft (>=0.15.2,<0.16.0)",
    "pyvips (>=3.0.0,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]
