[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "llava-server"
version = "0.0.1"
description = "LLAVA Server with FastAPI"
authors = ["Khairul Makirin <khairulmmakirin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
bert-score = "0.3.13"
uvicorn = "^0.22.0"
sentencepiece = ">=0.2.0,<0.3.0"
accelerate = ">=1.7.0,<2.0.0"
torchao = ">=0.11.0,<0.12.0"
peft = ">=0.15.2,<0.16.0"
pyvips = ">=3.0.0,<4.0.0"
tqdm = ">=4.67.1,<5.0.0"
numpy = "^1.24.2"
fastapi = {extras = ["standard"], version = "^0.115.12"}
pillow = "^11.2.1"
google-genai = "^1.19.0"
dotenv = "^0.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
